# state_duma_app

./: README.md
sql/: create_tables.sql  insert_data.sql
src/: index.html  main.js  styles.css
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  types.rs
src-tauri/src/controllers/: chairmen.rs  commission_members.rs  commissions.rs  meetings.rs  members.rs  mod.rs  organizers.rs
src-tauri/src/database/: init.rs  mod.rs
src-tauri/src/database/dto/: commissions.rs  meetings.rs  members.rs  mod.rs
src-tauri/src/database/entity/: commission_members.rs  commissions.rs  meetings.rs  members.rs  mod.rs  organizers.rs
src-tauri/src/database/enums/: commission_referral.rs  mod.rs
src-tauri/src/database/repositories/: chairmen.rs  commission_members.rs  commissions.rs  meetings.rs  members.rs  mod.rs  organizers.rs
src/lib/: phone_normalizer.js
src/screens/: chairmen.js  commissions.js  meetings.js  members.js  navigation.js  organizers.js
src/screens/reports/: experiencedMembers.js  meetingsByYear.js  membersByDirection.js  retiredMembers.js
